<resources>
    <string name="app_name">GuessTheNumber</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="display_name">Display Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_phone">Confirm Phone</string>
</resources>
